fixes #13066 - Improve readability of blank slate pages
Increase font size and reduce width of description of blank slate pages
to improve readability.

--- a/app/assets/stylesheets/patternfly_and_overrides.scss
+++ b/app/assets/stylesheets/patternfly_and_overrides.scss
@@ -292,3 +292,10 @@ div.form-group .pficon-info{
 a.btn-info span{
   padding-bottom: 4px;
 }
+
+.blank-slate-pf {
+  font-size: 1.4em;
+  width: 750px;
+  max-width: 90%;
+  margin: 0 auto;
+}
